filter chip gap fix

--- a/src/chips/chips.css
+++ b/src/chips/chips.css
@@ -2,7 +2,7 @@
     padding: 16px;
     display: flex;
    /* gap: 8px; */
-   justify-content: space-between;
+  
  /* Upward box-shadow */
  box-shadow: 0px -1px 2px 0px rgba(33, 33, 33, 0.06), 0px -1px 3px 0px rgba(33, 33, 33, 0.10);
  border-bottom: 1px solid #EEE;
@@ -15,6 +15,16 @@
    z-index: 1000;
    background-color: rgb(255, 255, 255);
    overflow: hidden;
+}
+/* When activeView is 'gap', justify content to space-between */
+.filter-chips-container.justify-space-between {
+    justify-content: space-between;
+}
+
+/* When activeView is 'actionable', only apply a gap */
+.filter-chips-container.gap-only {
+    justify-content: start;
+    gap: 8px; /* Adjust the gap as needed */
 }
 .selected-filters-container{
     position: fixed;
